fix some minor overlapping css issues

--- a/src/components/newList/todoitem/edit/time/duetime.css
+++ b/src/components/newList/todoitem/edit/time/duetime.css
@@ -9,7 +9,7 @@
     top: 50%;
     transform: translateY(-50%);
     width: 100%;
-    z-index: 1000;
+    z-index: 1;
 }
 .due-time-text {
     display: block; 
