--- a/src/components/newList/todoitem/todoitem.css
+++ b/src/components/newList/todoitem/todoitem.css
@@ -24,6 +24,7 @@
     position: relative;
     height: 80px;
     overflow: hidden;
+    cursor: pointer;
 }
 .ti-item-content {
     margin-left: 10px;
